# ic

./: CMakeLists.txt  Makefile  README  README.md  TODO.org  admireic.pc.in  icc_client.sh  icc_client_plafrim.sh  icc_server.sh  icc_server_plafrim.sh
examples/: client.c  jobcleaner.c  lowmem.c  nomem.c  slurmadhoccli.c  slurmjobmon.c  slurmjobmon2.c  spawn.c  synthio.c  testapp.c  writer.c
include/: cb.h  cbcommon.h  cbserver.h  flexmpi.h  hashmap.h  ic.h  ic_rpc.h  icc.h  icc_common.h  icc_priv.h  icc_rpc.h  icdb.h  icrm.h  reconfig.h  root_connections.h  rpc.h  uuid_admire.h
rc/: CMakeLists.txt  README.txt
rc/include/: root_connections.h
rc/src/: CMakeLists.txt  icdb.c  root_connections.cpp  root_controller.cpp  root_controller_bak.cpp
rc/test/: rpc_client_test.cpp
scripts/: admire_mpiexec.sh  admire_prolog.sh  admire_srun.sh  afs  areg  icc_client.sh  icc_prolog.sh  icc_server.sh
src/: adhoc_cli.c  adhoccli.c  app_manager.c  cb.c  cbcommon.c  cbserver.c  flexmpi.c  hashmap.c  ic.c  ic_client.c  ic_server.c  icc.c  icc_client.c  icc_plafrim.sh  icc_rpc.c  icc_server.c  icdb.c  icrm.c  jobmon.c  reconfig.c  root_connections.c  root_controller.c  rpc.c  server.c  testapp.c
src_standalone/: icc_discover_hosts.sh  icc_launch.sbatch  standalone.c
